--- a/_config.yml
+++ b/_config.yml
@@ -27,9 +27,10 @@ title:                 THEO-Junior's Class Notes
 # A short description (~150 chars) of the page used for the meta description tag.
 # Can use markdown, but no more than one paragraph (enforced by `>`)
 description:           >
-  A Jekyll theme with JavaScript powers. "Best Theme by a Mile".
-  Combines the best of static sites and modern web apps.
-  Open `_config.yml` to edit this text.
+  [자바 빅데이터 플랫폼 구축 전문가 양성과정]
+  을 수강하며 기록하는 강의록 노트입니다.
+  [Git Store ::]
+  https://github.com/Theo-Junior/Bigdataplatform_Class_Note
 
 # A shorter description for the sidebar.
 tagline:               >
