--- a/_config.yml
+++ b/_config.yml
@@ -33,7 +33,7 @@ description:           >
 # A shorter description for the sidebar.
 tagline:               >
   [자바 빅데이터 플랫폼 구축 전문가 양성과정]
-  을 수강하며 기록하는 강의록 노트입니다.\n
+  을 수강하며 기록하는 강의록 노트입니다.<br>
   [Git Store ::]
   https://github.com/Theo-Junior/Bigdataplatform_Class_Note
 
