--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ site-twitter: #if your site has a twitter account, enter it here
 
 # Author Settings
 author: Theo Kim # add your name
-author-img: Mypic.jpg # add your photo
+author-img: Mypic.jpeg # add your photo
 about-author: 자바 빅데이터플랫폼 개발자 양성과정에서 듣는 강의에 대한 개인 노트 및 다이어리입니다. # add description
 social-twitter: # add your Twitter handle
 social-facebook: # add your Facebook handle
