--- a/_config.yml
+++ b/_config.yml
@@ -15,7 +15,7 @@ about-author: 자바기반 빅데이터 플랫폼 개발자  양성과정 교육
 #social-twitter: # add your Twitter handle
 #social-facebook: # add your Facebook handle
 social-github: https://github.com/Theo-Junior # add your Github handle
-social-linkedin: https://www.linkedin.com/in/kim-seongmin-96ba56174/ # add your Linkedin handle
+social-linkedin: kim-seongmin-96ba56174/ # add your Linkedin handle
 social-email: miln0423kr@gmail.com # add your Email address
 
 # Disqus
